--- a/actm.html
+++ b/actm.html
@@ -96,7 +96,7 @@ name="school" placeholder="Search" />
                         
                 
                 <!-- Hidden Extra Mentor information -->
-                <div id="toggle-class I DON'T KNOW!!!!"><h4>Additional Mentor</h4>
+                <div id="mentor2"><h4>Additional Mentor</h4>
                         <div class="form-group">
                             <label>Mentor Name</label>
                             <input class="form-control" type="text" 
@@ -112,7 +112,7 @@ name="school" placeholder="Search" />
                             <input class="form-control" type="tel" 
                                 name="phone" />
                         </div>
-                <div id="toggle-class I DON'T KNOW!!!!"><h4>Additional Mentor</h4>
+                <div id="mentor3"><h4>Additional Mentor</h4>
                         <div class="form-group">
                             <label>Mentor Name</label>
                             <input class="form-control" type="text" 
@@ -128,7 +128,7 @@ name="school" placeholder="Search" />
                             <input class="form-control" type="tel" 
                                 name="phone" />
                         </div>    
-                <div id="toggle-class I DON'T KNOW!!!!"><h4>Additional Mentor</h4>
+                <div id="mentor4"><h4>Additional Mentor</h4>
                         <div class="form-group">
                             <label>Mentor Name</label>
                             <input class="form-control" type="text" 
