--- a/actm.html
+++ b/actm.html
@@ -58,20 +58,20 @@ name="school" placeholder="Search" />
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lorem nunc, molestie quis interdum sed, consequat nec elit. Sed a sem sed nulla scelerisque efficitur. Nunc a libero hendrerit, mollis augue rutrum, blandit felis. Donec sed nibh metus. Nulla mollis enim vel turpis tristique blandit. Aenean volutpat maximus commodo. Nam bibendum pharetra neque, sed convallis nunc imperdiet id. Nunc dapibus mi nunc, at dignissim ante mattis eu.
                     </div>
                 <div id="selectDiv">
-                    <label>Select Division</label>
-                    <select>
-                       <option>Division 1</option>
-                    <option>Division 2</option>
-                    <option>Division 3</option>
-                    </select>
+                        <label>Select Division</label>
+                        <select class="form-control">
+                                <option>Division 1</option>
+                                <option>Division 2</option>
+                                <option>Division 3</option>
+                        </select>
                 </div>
-                    <div id="selectTesting">
-                    <label>Select Testing Site</label>
-                    <select>
-                                 <option>Placeholder</option>
-                                 <option>Placeholder</option>
-                                 <option>Placeholder</option>
-                    </select>
+                <div id="selectTesting">
+                        <label>Select Testing Site</label>
+		        <select  class="form-control">
+		                <option>Placeholder</option>
+		                <option>Placeholder</option>
+		                <option>Placeholder</option>
+                        </select>
                 </div>
 
             </div><!--End School Info-->
