Added Section Counter
Added a section counter to tell the user what step they're on. Also commented out check mailing info. I think this should be displayed *after* registration.

--- a/actm.html
+++ b/actm.html
@@ -216,13 +216,14 @@ name="total" value="10" readonly /></td>
 
     </div><!--End #maincontent-->
 
-	<div id="register" class="form-group">
+	<div id="register" class="form-group center">
+		<h4 id="section-counter" class="center"></h4>
 		<button id="back" class="btn btn-primary btn-lg hide" onclick="prevSection()">Back</button>
 		<button id="next" class="btn btn-primary btn-lg" onclick="nextSection()">Next</button>
 	</div>
 
-    <!--This is the â€œfooter" of the page, with copyright info etc...-->
-    <div id="bottom">
+    <!--I'm Commenting this part out for now... I think it should be displayed *after* registration.-->
+    <!--<div id="bottom">
     <p>Please make your check for the above amount payable to <strong>Alabama Council of Teachers of Mathematics</strong>.<br>
     Mail your check to:</p>
     <p class="center">
@@ -231,7 +232,7 @@ name="total" value="10" readonly /></td>
     One Harrison Plaza, Box 5051<br>
     Florence, AL 35632<br>
     </p>
-    </div>
+    </div>-->
 </div><!--End #container-->
 </body>
 </html>
