Cleaned up the code for readability
A lot of the code was formatted weird from when we were working in
Google drive. I went in and cleaned some of it up to make it easier to
read. I also made a CSS section to note where the style sheets were.

--- a/actm.html
+++ b/actm.html
@@ -19,6 +19,7 @@
 	<!--Custom JS-->
 	<script src="actm.js"></script>
 
+	<!--CSS-->
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -45,7 +46,7 @@
                 <div class="form-group">
                     <label>School</label>
                     <input class="form-control" type="search"
-name="school" placeholder="Search" />
+					name="school" placeholder="Search" />
                 </div>
                 <div class="form-group">
                     <label>Division</label>
@@ -167,44 +168,44 @@ name="school" placeholder="Search" />
                             <td><label>Price</label></td>
                         </tr>
                         <tr>
-<!-- Come back and change min/maxlength to take any input and check for correctness with JS-->
+							<!-- Come back and change min/maxlength to take any input and check for correctness with JS-->
                             <td><label>Comprehensive</label></td>
-                       <td><input class="form-control" type="number" 
-name="algebraqty" min="0" max="99" value = "0" /></td>
+							<td><input class="form-control" type="number" 
+							name="algebraqty" min="0" max="99" value = "0" /></td>
                             <td><label>x $5 =</label></td>
-                       <td><input class="form-control" type="number" 
-name="algprice" min="0" max="99" value="0" readonly /></td>                     
+							<td><input class="form-control" type="number" 
+							name="algprice" min="0" max="99" value="0" readonly /></td>                     
                         </tr>
                         <tr>
                             <td><label>Algebra II w/Trig</label></td>
-                       <td><input class="form-control" type="number" 
-name="geometryqty" min="0" max="99" value="0"/></td>
+							<td><input class="form-control" type="number" 
+							name="geometryqty" min="0" max="99" value="0"/></td>
                             <td><label>x $5 =</label></td>
-                       <td><input class="form-control" type="number" 
-name="geoprice" value="0" readonly /></td>                 
+							<td><input class="form-control" type="number" 
+							name="geoprice" value="0" readonly /></td>                 
                         </tr>
                         <tr>
                             <td><label>Geometry</label></td>
-                       <td><input class="form-control" type="number" 
-name="calculusqty" min="0" max="99"  value="0"/></td>
+							<td><input class="form-control" type="number" 
+							name="calculusqty" min="0" max="99"  value="0"/></td>
                             <td><label>x $5 =</label></td>
-                       <td><input class="form-control" type="number" 
-name="pricebox" value="0" readonly /></td>                      
+							<td><input class="form-control" type="number" 
+							name="pricebox" value="0" readonly /></td>                      
                         </tr>
                         <tr>
                             <td><label>School Fee</label></td>
-                       <td><input class="form-control" type="number" 
-name="teamfeeqty" value="1" readonly /></td>
+							<td><input class="form-control" type="number" 
+							name="teamfeeqty" value="1" readonly /></td>
                             <td><label>x $10 =</label></td>
-                       <td><input class="form-control" type="number" 
-name="teamfee" value="10" readonly /></td>                      
+							<td><input class="form-control" type="number" 
+							name="teamfee" value="10" readonly /></td>                      
                         </tr>
                         <tr>
                             <td><label></label></td>
                             <td><label></label></td>
                             <td><label></label></td>
-                       <td><input class="form-control" type="number" 
-name="total" value="10" readonly /></td>                      
+							<td><input class="form-control" type="number" 
+							name="total" value="10" readonly /></td>                      
                         </tr>
                     </table>
                 </div>            
