--- a/actm.html
+++ b/actm.html
@@ -154,7 +154,7 @@
                                 name="phone" />
                         </div>
                 </div>
-				<button class="btn btn-default">Add Mentor</button>
+				<button type ="button" class="btn btn-default" onclick="addMentor()">Add Mentor</button>
             </div><!--End Team Info-->
 
             <!--This is the part of the form with payment info.-->
