Fixed names for table items
A lot of the names for the table items still had old names from when we
didn't know what tests were going to be given. I updated them to the
correct names.

--- a/actm.html
+++ b/actm.html
@@ -171,34 +171,35 @@
 							<!-- Come back and change min/maxlength to take any input and check for correctness with JS-->
                             <td><label>Comprehensive</label></td>
 							<td><input class="form-control" type="number" 
-							name="algebraqty" min="0" max="99" value = "0" /></td>
-                            <td><label>x $5 =</label></td>
+							name="comprehensiveQty" min="0" max="99" value = "0"/></td>
+                            
+							<td><label>x $5 =</label></td>
 							<td><input class="form-control" type="number" 
-							name="algprice" min="0" max="99" value="0" readonly /></td>                     
+							name="comprehensivePrice" min="0" max="99" value="0" readonly /></td>                     
                         </tr>
                         <tr>
                             <td><label>Algebra II w/Trig</label></td>
 							<td><input class="form-control" type="number" 
-							name="geometryqty" min="0" max="99" value="0"/></td>
+							name="algebraIIQty" min="0" max="99" value="0"/></td>
                             <td><label>x $5 =</label></td>
 							<td><input class="form-control" type="number" 
-							name="geoprice" value="0" readonly /></td>                 
+							name="algebraIIPrice" value="0" readonly /></td>                 
                         </tr>
                         <tr>
                             <td><label>Geometry</label></td>
 							<td><input class="form-control" type="number" 
-							name="calculusqty" min="0" max="99"  value="0"/></td>
+							name="geometryQty" min="0" max="99"  value="0"/></td>
                             <td><label>x $5 =</label></td>
 							<td><input class="form-control" type="number" 
-							name="pricebox" value="0" readonly /></td>                      
+							name="geometryPrice" value="0" readonly /></td>                      
                         </tr>
                         <tr>
                             <td><label>School Fee</label></td>
 							<td><input class="form-control" type="number" 
-							name="teamfeeqty" value="1" readonly /></td>
+							name="schoolFeeQty" value="1" readonly /></td>
                             <td><label>x $10 =</label></td>
 							<td><input class="form-control" type="number" 
-							name="teamfee" value="10" readonly /></td>                      
+							name="schoolFeePrice" value="10" readonly /></td>                      
                         </tr>
                         <tr>
                             <td><label></label></td>
