Hid "Add Mentor" button
1. Changed this section so that the "Add Mentor" button simply
disappears after the max amount of fields are displayed.

2. Added an ID for the button.

--- a/actm.html
+++ b/actm.html
@@ -154,7 +154,8 @@
                                 name="phone" />
                         </div>
                 </div>
-				<button type ="button" class="btn btn-default" onclick="addMentor()">Add Mentor</button>
+				<button type ="button" class="btn btn-default" 
+				id="mentorButton" onclick="addMentor()">Add Mentor</button>
             </div><!--End Team Info-->
 
             <!--This is the part of the form with payment info.-->
