Fixed a few html validation errors. CSS & HTML now pass validation.

--- a/actm.html
+++ b/actm.html
@@ -2,8 +2,6 @@
 <html lang ="en">
 <head>
 	<!--Coded by Tyler Yasaka, Victor Rogers, Ben Etheredge-->
-	
-    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <meta charset="UTF-8">
 	<meta name="AUTHOR" content="Tyler Yasaka, Victor Rogers, Ben Etheredge">
 	<title>Alabama Statewide High School Mathematics Contest Online Registration</title>
@@ -27,8 +25,8 @@
 <div id="container" class="container">
     <!--This is the header of the page, with the title and banner/logo-->
     <div id="top">
-        <img id="logo" src="logo.png">
-        <h1>Alabama Statewide </br> High School Mathematics Contest</h1>
+        <img id="logo" alt="Alabama Council of Teachers of Mathematics" src="logo.png">
+        <h1>Alabama Statewide <br> High School Mathematics Contest</h1>
         <h4>Registration Form</h4>
     </div>
 
