Changed team information to Mentor information

--- a/actm.html
+++ b/actm.html
@@ -85,9 +85,9 @@
 
             <!--This is the part of the form with team info.-->
             <div id="teaminfo" class="section-2">
-				<h3>Team Information</h3>
+				<h3>Mentor Information</h3>
 						<input name="mentorcount" type="hidden" value="0"/>
-						<h4>Mentor 1</h4>
+						<!--<h4>Mentor 1</h4>-->
 						<div class="form-group">
                             <label>Name</label>
                             <input class="form-control" type="text"
