--- a/actm.html
+++ b/actm.html
@@ -9,9 +9,6 @@
 	<!--Jquery-->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	
-	<!--Jquery Validator Plugin-->
-	<script src="jquery.validate.min.js"></script>
-
 	<!--Bootstrap-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<!-- Latest compiled and minified JavaScript -->
@@ -101,7 +98,9 @@
 						<div class="form-group">
                             <label>Phone</label>
                             <input class="form-control" type="tel"
-                                name="mentorphone-1" required="required"/>
+                                name="mentorphone-1" id="mentorphone-1"
+								onblur="itemValidate('mentorphone-1', /^\(?([0-9]{3})\)?[-. ]?([0-9]{3})[-. ]?([0-9]{4})$/)";
+								placeholder="000-000-0000" required="required"/>
                         </div>
 						<div id="mentorcontainer">
 							<!--Added Mentors will go here-->
