Email Custom Regex
Added a regex to validate email addresses. This is a pretty simple
regex, so feel free to change it if you know of a better one.

--- a/actm.html
+++ b/actm.html
@@ -93,7 +93,9 @@
 						<div class="form-group">
                             <label>Email</label>
                             <input class="form-control" type="email"
-                                name="mentoremail-1" required="required"/>
+                                name="mentoremail-1" id="mentoremail-1"
+								onblur="itemValidate('mentoremail-1', /^\w+([-+.']\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/)"
+								required="required"/>
                         </div>
 						<div class="form-group">
                             <label>Phone</label>
