--- a/actm.html
+++ b/actm.html
@@ -95,7 +95,7 @@
                             <input class="form-control" type="email"
                                 name="mentoremail-1" id="mentoremail-1"
 								onblur="itemValidate('mentoremail-1', /^\w+([-+.']\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/)"
-								required="required"/>
+								placeholder="example@email.com" required="required"/>
                         </div>
 						<div class="form-group">
                             <label>Phone</label>
