--- a/actm.html
+++ b/actm.html
@@ -35,6 +35,8 @@
     <!--This is the main content of the page.-->
     <div id="maincontent">
 
+		<div id="sectionerror"></div>
+	
         <form id="mainform">
 
 			<div id="toggle-container">
@@ -118,7 +120,7 @@
             <div id="paymentsection" class="section-3">
 				<h3>Payment Information</h3>
                 <div class="table-responsive">
-				<h4 id="paymenterror" class="error"></h4>
+				<p id="paymenterror" class="error"></p>
                     <table class="table">
                         <tr>
                             <td><label>Type</label></td>
