--- a/actm.html
+++ b/actm.html
@@ -46,8 +46,8 @@
                 <div class="form-group">
                     <label>School</label>
                     <input class="form-control" type="search"
-					name="school" id="school" oninput="itemValidate('school', /./)"
-					"placeholder="Search" required="required"/>
+					name="school" id="school" oninput="itemValidate('school', /./)" 
+					placeholder="Search" required="required"/>
                 </div>
                 <div class="form-group">
                     <label>Division</label>
@@ -106,7 +106,7 @@
                             <label>Phone</label>
                             <input class="form-control" type="tel"
                                 name="mentorphone-1" id="mentorphone-1"
-								oninput="itemValidate('mentorphone-1', /^\(?([0-9]{3})\)?[-. ]?([0-9]{3})[-. ]?([0-9]{4})$/)";
+								oninput="itemValidate('mentorphone-1', /^\(?([0-9]{3})\)?[-. ]?([0-9]{3})[-. ]?([0-9]{4})$/)"
 								placeholder="000-000-0000" required="required"/>
                         </div>
 						<div id="mentorcontainer">
