--- a/actm.html
+++ b/actm.html
@@ -66,7 +66,7 @@
                     </div>
                 <div id="selectDiv">
                         <label>Select Division</label>
-                        <select class="form-control">
+                        <select class="form-control" name="selectDivision">
                                 <option>Division 1</option>
                                 <option>Division 2</option>
                                 <option>Division 3</option>
@@ -74,7 +74,7 @@
                 </div>
                 <div id="selectTesting">
                         <label>Select Testing Site</label>
-		        <select  class="form-control">
+		        <select  class="form-control" name="selectTestingSite">
 		                <option>Placeholder</option>
 		                <option>Placeholder</option>
 		                <option>Placeholder</option>
