Linked 'mainform' to php file

--- a/actm.html
+++ b/actm.html
@@ -37,7 +37,7 @@
 
 		<div id="sectionerror"></div>
 	
-        <form id="mainform">
+        <form id="mainform" action="actm.php" method="post">
 
 			<div id="toggle-container">
 
